Added full coverage tests (~90%) for UserService